--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,3 +12,9 @@
     @apply block text-center;
   }
 }
+
+@media not all and (min-resolution: 0.001dpcm) {
+  img[loading="lazy"] {
+    clip-path: inset(0.5px);
+  }
+}
